--- a/Pomodoro/app/src/main/res/values/strings.xml
+++ b/Pomodoro/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="to_do">Todo</string>
     <string name="completed_tasks">Completed Tasks</string>
     <string name="tasks_history">History</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_task"> Add Task</string>
+    <string name="start_timer">Start Timer</string>
+    <string name="mark_as_completed">Completed</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
